--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 REACT_APP_GOOGLE_CLIENT_ID=502507650132-u661s0l5to5tf2adi4obp23mq4eq1mut.apps.googleusercontent.com
 REACT_APP_CRONOFY_CLIENT_ID=DE3BrhL3kR9jnYEBg37NkkeXtkmcNWSp
 REACT_APP_CRONOFY_CLIENT_SECRET=CRN_YB3L9SmfROJSR6VEdfd2ShQRnr9Nt0AUUMFDdW
-REACT_APP_CRONOFY_REDIRECT_URI=http://localhost:3000/callback
+REACT_APP_CRONOFY_REDIRECT_URI=https://jynnjay.github.io/calendar/
 REACT_APP_CRONOFY_API_HOST=https://api.cronofy.com
 REACT_APP_CRONOFY_DATA_CENTER_URL=https://app.cronofy.com
